# slc-localization

./: README.md  Readme copy.md  main.py  pyproject.toml
data/: file_download.sh
src/data/: create_embeddings.py  datasets.py  transform.py  utilities.py
src/models/: models.py
src/training/: slc_analysis_skorch.py
